--- a/css/main.css
+++ b/css/main.css
@@ -357,15 +357,29 @@ template {
   display: none;
 }
 
+.main__text {
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25.29px;
+}
+
+.green {
+  background-color: rgb(48, 153, 117);
+}
+
 .page {
   max-width: 100%;
   height: 100%;
   margin-inline: auto;
-  margin-inline: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  background: linear-gradient(rgb(48, 153, 117), rgb(88, 179, 104));
 }
 
 .container {
-  max-width: 1260px;
+  max-width: 1529px;
   margin-inline: 2vw;
   padding-inline: 10px;
   display: flex;
