--- a/src/style/base/_extends.scss
+++ b/src/style/base/_extends.scss
@@ -22,3 +22,15 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+.main__text {
+    color: #ffffff;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.29px;
+}
+
+.green {
+    background-color: rgb(48, 153, 117);
+}
