--- a/src/style/components/_grid.scss
+++ b/src/style/components/_grid.scss
@@ -2,15 +2,13 @@
     max-width: 100%;
     height: 100%;
     margin-inline: auto;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-
-    margin-inline: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    background: linear-gradient(rgba(48, 153, 117, 1), rgba(88, 179, 104, 1) );
 }
 
 .container {
-    max-width: 1260px;
+    max-width: 1529px;
     margin-inline: 2vw;
     padding-inline: 10px;
     display: flex;
