--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 html {
   box-sizing: border-box;
   line-height: 1.5;
@@ -358,15 +358,18 @@ template {
 }
 
 .main__text {
-  color: #ffffff;
   font-family: Poppins;
-  font-size: 18px;
+  font-size: clamp(12px, 2vw, 18px);
   font-weight: 400;
-  line-height: 25.29px;
+  line-height: 120%;
 }
 
 .green {
   background-color: rgb(48, 153, 117);
+}
+
+.bile {
+  color: rgb(255, 255, 255);
 }
 
 .page {
@@ -387,6 +390,93 @@ template {
   align-items: center;
 }
 
-h1 {
-  color: green;
+.header_page_nav {
+  margin-block-end: clamp(1em, 3vw, 95px);
+}
+
+.page__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page__logo_text {
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  text-transform: uppercase;
+}
+
+.header__nav_links {
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: clamp(12px, 2vw, 18px);
+  font-weight: 400;
+  line-height: 27px;
+  text-transform: capitalize;
+  margin-block-end: 1em;
+}
+.header__nav_links ul {
+  list-style-type: none;
+}
+.header__nav_links a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.nav_link {
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: clamp(12px, 2vw, 18px);
+  font-weight: 600;
+  line-height: 27px;
+  text-decoration: none;
+}
+
+.header__btns {
+  display: flex;
+  gap: 2em;
+}
+
+.main_btn {
+  border-radius: 5px;
+  background: #dad873;
+  background-blend-mode: normal;
+  border: none;
+  padding: 1vw 2vw;
+}
+
+.page_tittle {
+  display: block;
+  max-width: 300px;
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: clamp(24px, 4vw, 80px);
+  font-weight: 700;
+  line-height: 120%;
+  text-transform: capitalize;
+  border-bottom: 2px solid #ffffff;
+  padding-block-end: 2vw;
+  margin-block-end: 3vw;
+}
+
+.proposition {
+  display: flex;
+  gap: 1em;
+}
+
+.num {
+  color: #ffffff;
+  font-family: Poppins;
+  font-size: clamp(18px, 3vw, 48px);
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: capitalize;
+  margin-block-end: 0.5em;
+}
+
+.proposition_block {
+  margin-block-end: 1em;
 }/*# sourceMappingURL=main.css.map */
