--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,4 +1,5 @@
 .header__page {
+    // margin-block-end: clamp(2em, 3vw, 95px);
 }
 .header_page_nav {
     margin-block-end: clamp(1em, 3vw, 95px);
@@ -54,7 +55,10 @@
     padding: 1vw 2vw;
 }
 .header__page_hero {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin-block-end: clamp(2em, 3vw, 95px);
 }
 .left__box {
 }
@@ -88,6 +92,12 @@
     margin-block-end: 1em;
 }
 .right__box {
+    align-self: flex-end;
+    margin: 0;
+    padding: 0;
+    img {
+        transform: translateY(35px);
+    }
 }
 
 
