--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,6 +11,8 @@ html {
 }
 
 body {
+    display: grid;
+    grid-template-rows: 1fr;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: normal;
@@ -69,6 +71,8 @@ p {
 @import "components/btn";
 @import "layout/header";
 @import "layout/card";
+@import "layout/exchange";
+@import "layout/global";
 @import "layout/footer";
 
 
