--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -2,6 +2,9 @@
     // margin-block-end: clamp(2em, 3vw, 95px);
 }
 .header_page_nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-block-end: clamp(1em, 3vw, 95px);
 }
 .container {
@@ -26,9 +29,12 @@
     font-weight: 400;
     line-height: 27px;
     text-transform: capitalize;
-    margin-block-end: 1em;
     & ul {
         list-style-type: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 1em;
     }
     & a {
         color: #ffffff;
@@ -45,14 +51,22 @@
 }
 .header__btns {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 2em;
+    margin-inline-start: 1em;
+    &>a {
+        white-space: nowrap;
+        color: #ffffff;
+        text-decoration: none;
+    }
 }
 .main_btn {
     border-radius: 5px;
     background: #dad873;
     background-blend-mode: normal;
     border: none;
-    padding: 1vw 2vw;
+    padding: 10px;
 }
 .header__page_hero {
     display: flex;
@@ -64,10 +78,10 @@
 }
 .page_tittle {
     display: block;
-    max-width: min(300px);
+    max-width: 100%;
     color: #ffffff;
     font-family: Poppins;
-    font-size: clamp(24px, 4vw, 80px);
+    font-size: clamp(24px, 6vw, 80px);
     font-weight: 700;
     line-height: 120%;
     text-transform: capitalize;
@@ -76,13 +90,14 @@
     margin-block-end: 3vw;
 }
 .proposition {
+    max-width: 350px;
     display: flex;
     gap: 1em;
 }
 .num {
     color: #ffffff;
     font-family: Poppins;
-    font-size: clamp(18px, 3vw, 48px);
+    font-size: clamp(18px, 2vw, 48px);
     font-weight: 700;
     line-height: 100%;
     text-transform: capitalize;
