--- a/src/style/base/_media.scss
+++ b/src/style/base/_media.scss
@@ -2,5 +2,44 @@
     .header_page_nav {
         justify-content: space-between;
     }
+    .header__page_hero {
+        flex-direction: row;
+        justify-content: space-between;
+        // & .right__box {
+        //     flex-basis:30%;
+        // }
+        & .left__box {
+            max-width: 704px;
+        }
+        .page_tittle {
+            min-width: 100%;
+        }
+    }
+    
 }
 
+@media screen and (min-width: 488px) {
+    .card__petal-block {
+        flex-direction: row;
+        gap: 5vw;
+        margin-block-end: 8em;
+    }
+    .exchange__main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+    }
+    .exchange__currency {
+        display: flex;
+        justify-content: space-evenly;
+        .exchange__currency_top>p, .exchange__currency_bottom>p {
+            margin-block-end: 1em;
+        }
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .card__petal-block {
+        gap: 10vw;
+    }
+}
